# MEI_UA_1ano

./: README.md
1ºSemestre/AA/: README.md
1ºSemestre/AA/Pratica/P1/: iterative_functions.py  recursive_functions.py
1ºSemestre/AA/Pratica/P10/: bloom_filter_V_1.py  hash_table_V_1.py
1ºSemestre/AA/Pratica/P12/: count_min_sketch.py
1ºSemestre/AA/Pratica/P2/: tasks.py
1ºSemestre/AA/Pratica/P3/: fibonacci_number.py  high_low_game.py
1ºSemestre/AA/Pratica/P4/: coin_row_problem.py  delannoy_numbers.py
1ºSemestre/AA/Pratica/P7/: dice_twice_prob.py  main.py  requirements.txt
1ºSemestre/AA/Projetos/Projeto1/: README.md  requirements.txt
1ºSemestre/AA/Projetos/Projeto2/: README.md  requirements.txt
1ºSemestre/AA/Projetos/Projeto3/: README.md  requirements.txt
1ºSemestre/ES/: README.md
1ºSemestre/ES/Pratica/NetworkingAndEC2Terraform-AWSAcademy/: README.md  provider.tf  vars.tf
1ºSemestre/ES/Pratica/NetworkingAndEC2Terraform-RegularAWSAccount/: README.md  provider.tf  testing.tf  vars.tf
1ºSemestre/ES/Projetos/Projeto Grupo/: README.md
1ºSemestre/ES/Projetos/Projeto Individual/: .gitignore  README.md  docker-compose.yaml  docker-compose.yaml.prod
1ºSemestre/RI/: README.md
1ºSemestre/RI/Projetos/Projeto 1/: .gitignore  README.md
1ºSemestre/RI/Projetos/Projeto 2/: README.md  requirements.txt
1ºSemestre/RVA/: README.md
1ºSemestre/RVA/Projeto/VarLab_RVA/: .gitignore  ImageDatabase.cs
1ºSemestre/RVA/Teorica/: RVA Final Presentation 2024 2025.pptx
1ºSemestre/RVA/Teorica/Templates Apresentacoes/: TemplatePitchPresentationRVA.pptx
1ºSemestre/VI/: README.md
1ºSemestre/VI/Pratica/GoogleCharts/: ex1_1.htm  ex1_2.htm  ex1_3.htm  ex1_4_1.htm  ex1_4_2.htm  ex1_5.htm  ex2.htm  ex2_1.html  ex2_2.html  ex3_1.html
1ºSemestre/VI/Pratica/SVG/: ex2_1.html  ex2_2.html
1ºSemestre/VI/Projeto/: README.md
2ºSemestre/AS/: README.md
2ºSemestre/AS/Projetos/Grupo/: README.md
2ºSemestre/AS/Projetos/Individual/: README.md
2ºSemestre/CLE/: README.md
2ºSemestre/CLE/Pratica/P3/: CMakeLists.txt
2ºSemestre/CLE/Pratica/P3/src/: aliveWell.cpp  error-return.cpp  error.cpp  hello.cpp  minMaxGlobal.cpp  sendRecData.cpp
2ºSemestre/CLE/Pratica/performance/: testCompiler1.c  (+1 more)
2ºSemestre/CLE/Projetos/Projeto1/: .gitignore  CMakeLists.txt  README.md  requirements.txt
2ºSemestre/CLE/Projetos/Projeto1/multi_thread/weather-stations/: CMakeLists.txt  README.md
2ºSemestre/CLE/Projetos/Projeto1/multi_thread/weather-stations/scripts/: generate_samples.sh  process_samples.sh  run_experiments.sh
2ºSemestre/CLE/Projetos/Projeto1/multi_thread/weather-stations/src/: main.cpp  processor.cpp  processor.h  reader.cpp  reader.h  thread_pool.cpp  thread_pool.h
2ºSemestre/CLE/Projetos/Projeto1/multi_thread/word-count/: CMakeLists.txt  Makefile  README.md  run.py
2ºSemestre/CLE/Projetos/Projeto1/multi_thread/word-count/results/csv/: atomic_mutex_results.csv  compare_results.csv  progressive_threads_results.csv
2ºSemestre/CLE/Projetos/Projeto1/multi_thread/word-count/src/: globals.cpp  globals.h  main.cpp  thread_pool.cpp  thread_pool.h  utf-8.cpp  utf-8.h  word_count.cpp  word_count.h
2ºSemestre/CLE/Projetos/Projeto1/single_thread/weather-stations/: CMakeLists.txt  Makefile
2ºSemestre/CLE/Projetos/Projeto1/single_thread/weather-stations/scripts/: process_samples.sh
2ºSemestre/CLE/Projetos/Projeto1/single_thread/weather-stations/src/: cities.cpp
2ºSemestre/CLE/Projetos/Projeto1/single_thread/word-count/: CMakeLists.txt  books.txt  books_test.txt
2ºSemestre/CLE/Projetos/Projeto1/single_thread/word-count/src/: main.cpp  word_count.h
2ºSemestre/CLE/Projetos/Projeto2/mpi/weather-stations/: CMakeLists.txt  README.md  requirements.txt  visualizations.py
2ºSemestre/CLE/Projetos/Projeto2/mpi/weather-stations/results/: execution_times_all_processes_no_optimization.csv  execution_times_all_processes_optimization3.csv
2ºSemestre/CLE/Projetos/Projeto2/mpi/weather-stations/scripts/: generate_samples.sh  process_samples.sh
2ºSemestre/CLE/Projetos/Projeto2/mpi/weather-stations/src/: gather.cpp  gather.h  main.cpp  processor.cpp  processor.h  types.cpp  types.h
2ºSemestre/CLE/Projetos/Projeto2/mpi/word-count/: CMakeLists.txt  Makefile  README.md  build.sh  run.py
2ºSemestre/CLE/Projetos/Projeto2/mpi/word-count/results/csv/: comparative_results_20250418_232652.csv  optimized_results_20250418_232652.csv  unoptimized_results_20250418_232652.csv
2ºSemestre/CLE/Projetos/Projeto2/mpi/word-count/src/: main.cpp  processor.cpp  processor.h  reader.cpp  reader.h  types.cpp  types.h  word_count.cpp  word_count.h
2ºSemestre/CLE/Projetos/Projeto2/original/weather-stations/: CMakeLists.txt  README.md
2ºSemestre/CLE/Projetos/Projeto2/original/weather-stations/results/: execution_results_no_optimization.csv  execution_results_optimization3.csv
2ºSemestre/CLE/Projetos/Projeto2/original/weather-stations/scripts/: process_samples.sh
2ºSemestre/CLE/Projetos/Projeto2/original/weather-stations/src/: create-samples.cpp  main.cpp
2ºSemestre/GIC/: README.md
2ºSemestre/GIC/Projeto/: .gitignore  README.md  delete_docker_images_registry.sh  deploy.sh
2ºSemestre/TAI/: README.md
2ºSemestre/TAI/Projetos/: README.md
2ºSemestre/WS/: README.md
(+473 files in other folders)
